# gpc-census

./: .gitignore  AGENTS.md  Makefile  README.md  gpc-census.spec  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yml  pr-metadata.yml
docs/: AXIOMS_PAPER.md  CLOSURE_PLAN.md  GENERATOR_PLAN.md  RESEARCH.md  THEOREMS.md  ak2008_extracted.md  bracket_3_11.json  bracket_3_11_settlement.json  bracket_3_12_stage0_inner.json  bracket_3_12_true_vertices.json  paper_open_problems_prep.md  partial_families_3_11_3_12.json  polytope_invariants.json  stage1_klyachko_spec.md
docs/hybrid_cracks/: 4_9_v40.jsonl  4_9_v42.jsonl  v103.jsonl  v113_production.json  v57_production.json  v60.jsonl  v89.jsonl  v96.jsonl
results/data/: PROVENANCE.md  SHA256SUMS  census_master.csv  feature_table.csv  states.jsonl
results/data/census/: census_3_10_results.txt  census_3_6_results.txt  census_3_7_results.txt  census_3_8_results.txt  census_3_9_results.txt  census_4_8_results.txt  census_4_9_results.txt  census_5_10_results.txt
results/data/constraints/: ak_thesis_rank9_10_constraints.json
results/data/vertices/: vertices_3_10.json  vertices_3_6.json  vertices_3_7.json  vertices_3_8.json  vertices_4_10.json  vertices_4_8.json  vertices_5_10.json
results/report/: main.md  main.tex  references.bib
scripts/: README.md  build_states.py  census_engine.py  checkpoint.py  contraction_attack.py  crack_vertex_exact.py  facet_laws.py  fiber_curves.py  hybrid_search.py  hybrid_v96.py  interference8_1.py  kxk_degen.py  leads_analysis.py  partial_families.py  plethysm_inner_hull.py  polygon_target.py  polytope_invariants.py  settle_bracket_3_11.py  signed_design_fast.py  signed_design_generic.py  signed_design_v96_full.py  sn_characters.py  solve_all.py  sos_nonattain.py  sos_reduce_165.py  sos_symmetry.py  sos_symmetry_scaled.py  state_constructor.py  tex2md.py  transport_states.py  v89_grobner.py  v89_symmetry.py  validate_states.py  vb_fiber_ideal.py  vb_holonomy.py  vb_reality_sos.py  verify_hybrid_state.py  wall_solver.py  wall_test.py
src/gpc_census/: __init__.py  certify.py  classify.py  cli.py  constraints.py  core.py  dataset.py  degenerate.py  exactify.py  polytope.py  states.py  validate.py
src/gpc_census/data/: constraints.json
tests/: test_cli.py  test_conjecture2.py  test_core.py  test_data_integrity.py  test_degenerate.py  test_denominator_tier.py  test_facet_laws.py  test_kernel_quotient.py  test_pipeline.py  test_plethysm.py  test_polygon_target.py  test_rigid_class.py  test_signed_design_fast.py  test_signed_design_v96.py  test_symmetry_reduced.py  test_v96_crack.py  test_vb_holonomy.py
tests/data/: PROVENANCE.md
tests/data/census/: census_4_10_results.txt
tests/data/constraints/: ak_thesis_rank9_10_constraints.json
tests/data/vertices/: vertices_3_9.json  vertices_4_9.json  vertices_5_10.json
