[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpc-census"
version = "0.1.0"
description = "Algorithmic pipeline that constructs exact extremal states for fermionic natural-occupation-number (moment) polytopes"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Jamie Orlando", email = "jamie@orlandonh.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pulp",
    "scipy",
    "sympy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
cpsat = ["ortools==9.15.6755"]
# S3 checkpoint mirror for the long-running scripts/ campaigns (spot-resilient
# runs). Imported lazily, so disk-only checkpointing needs nothing extra.
s3 = ["boto3"]

[project.urls]
Homepage = "https://github.com/theorlandog/gpc-census"

[project.scripts]
gpc-census = "gpc_census.cli:main"

[dependency-groups]
dev = [
    { include-group = "test" },
    "ruff",
]
test = ["pytest"]

[tool.hatch.build.targets.sdist]
# The paper under results/report ships in the release data-output.zip,
# never in the sdist or RPM.
exclude = ["results/report"]
include = [
    "src",
    "tests",
    "gpc-census.spec",
    "Makefile",
    "README.md",
    "LICENSE",
    ".python-version",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gpc_census"]

[tool.ruff]
extend-exclude = ["scripts"]
line-length = 100
src = ["src", "tests"]
